loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:3: error: ';' expected but ',' found.
while (isFacingWall) {left(); forward(); right(), forward()}
                                                ^